--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -8,6 +8,16 @@
     tools:context=".ui.login.LoginFragment"
     android:padding="16dp">
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/signUp"
+        android:layout_marginTop="32dp"
+        tools:visibility="visible" />
     <TextView
         android:id="@+id/login_page_title"
         android:layout_width="wrap_content"
@@ -25,13 +35,16 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
         android:minWidth="320dp"
+        app:helperTextTextColor="@color/red"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login_page_title">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/email_edit_text"
             style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
             android:layout_width="match_parent"
+            android:imeOptions="actionNext"
             android:layout_height="match_parent"
             android:inputType="textAutoComplete"
             android:hint="@string/email_hint" />
@@ -43,14 +56,17 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
         android:minWidth="320dp"
-        app:endIconMode="clear_text"
+        app:helperTextTextColor="@color/red"
+        app:endIconMode="password_toggle"
         app:layout_constraintStart_toStartOf="@+id/email_text_input"
         app:layout_constraintTop_toBottomOf="@+id/email_text_input">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/password_edit_text"
             style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:imeOptions="actionDone"
             android:hint="@string/password_hint"
             android:inputType="textPassword" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -61,6 +77,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="1dp"
         android:layout_marginTop="48dp"
+
         android:text="@string/forgot_password"
         android:textColor="@color/purple_700"
         app:layout_constraintStart_toStartOf="@+id/password_text_input"
