--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -25,15 +25,17 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
         android:minWidth="320dp"
+        app:helperTextTextColor="@color/red"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/sign_up_page_title">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/userName_edit_text"
             style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:inputType="textAutoComplete"
+            android:layout_height="wrap_content"
+            android:inputType="textCapWords"
             android:imeOptions="actionNext"
             android:hint="@string/username_edit_text_label" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -42,17 +44,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
+        app:helperTextTextColor="@color/red"
         android:minWidth="320dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/userName_text_input">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/email_edit_text"
             style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:imeOptions="actionNext"
-            android:inputType="textAutoComplete"
+            android:inputType="textEmailAddress"
             android:hint="@string/email_hint" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -62,11 +66,13 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:minWidth="320dp"
-        app:endIconMode="clear_text"
+        app:helperTextTextColor="@color/red"
+        app:endIconMode="password_toggle"
         app:layout_constraintStart_toStartOf="@+id/email_text_input"
         app:layout_constraintTop_toBottomOf="@+id/email_text_input">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/password_edit_text"
             style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -76,16 +82,18 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/confirm_button"
+        android:id="@+id/confirm_text_input"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
+        app:helperTextTextColor="@color/red"
         android:minWidth="320dp"
-        app:endIconMode="clear_text"
+        app:endIconMode="password_toggle"
         app:layout_constraintStart_toStartOf="@+id/password_text_input"
         app:layout_constraintTop_toBottomOf="@+id/password_text_input">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/confirm_password_edit_text"
             style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -104,15 +112,15 @@
         android:text="@string/sign_up_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/confirm_button" />
+        app:layout_constraintTop_toBottomOf="@id/confirm_text_input" />
     <ProgressBar
         android:id="@+id/progressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="32dp"
+        app:layout_constraintTop_toBottomOf="@id/sign_up_btn"
         tools:visibility="visible" />
 </androidx.constraintlayout.widget.ConstraintLayout>
