--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
             tools:layout="@layout/fragment_home"
             android:layout_height="match_parent"
             app:navGraph="@navigation/nav_graph"
-            tools:context=".MainActivity">
+            android:layout_marginBottom="56dp">
         </androidx.fragment.app.FragmentContainerView>
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottom_nav_view"
