--- a/app/src/main/res/layout/drawer_app_header.xml
+++ b/app/src/main/res/layout/drawer_app_header.xml
@@ -12,7 +12,7 @@
         android:id="@+id/userIcon"
         android:layout_width="75dp"
         android:contentDescription="@string/drawer_user_info_user_icon"
-        tools:src="@drawable/ic_launcher_background"
+        android:src="@drawable/ic_launcher_foreground"
         android:layout_height="75dp"
         android:layout_marginBottom="8dp"
         />
