--- a/app/src/main/res/layout/fragment_bottom_sheet_resource_item.xml
+++ b/app/src/main/res/layout/fragment_bottom_sheet_resource_item.xml
@@ -43,18 +43,18 @@
         app:layout_constraintStart_toStartOf="parent"
         android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@+id/information"
-        app:drawableStartCompat="@drawable/baseline_favorite_24" />
+        app:drawableStartCompat="@drawable/baseline_remove_24" />
     <TextView
         android:id="@+id/download"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="84dp"
         android:padding="16dp"
         android:text="Download"
         android:drawablePadding="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mark_favourite"
+        app:layout_constraintTop_toBottomOf="@+id/information"
         app:drawableStartCompat="@drawable/baseline_file_download_24" />
     <TextView
         android:id="@+id/shareLink"
@@ -74,11 +74,12 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:padding="16dp"
-        android:text="Move to trash"
+        android:text="Move to bin"
         android:textColor="@color/red"
         android:drawablePadding="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/shareLink"
-        app:drawableStartCompat="@drawable/baseline_recycling_24" />
+        app:drawableStartCompat="@drawable/baseline_recycling_24"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
