--- a/app/src/main/res/layout/resource_item_layout.xml
+++ b/app/src/main/res/layout/resource_item_layout.xml
@@ -6,84 +6,85 @@
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     tools:ignore="hardCodedText">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <TextView
             android:id="@+id/resource_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:maxWidth="250dp"
             android:layout_margin="16dp"
-            android:textSize="16sp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/buttonMore"
             android:ellipsize="middle"
             android:lines="1"
-            app:layout_constraintHorizontal_bias="0"
-            tools:text="Resource name . This is a really long long long long name"/>
+            android:maxWidth="250dp"
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Resource name . This is a really long long long long name" />
+
         <ImageView
             android:id="@+id/hasLink"
             android:layout_width="16dp"
             android:layout_height="16dp"
             android:layout_margin="16dp"
             android:contentDescription="hasLink"
-            android:visibility="invisible"
             android:src="@drawable/baseline_link_24"
-            app:layout_constraintTop_toTopOf="parent"
+            android:visibility="invisible"
             app:layout_constraintStart_toEndOf="@id/resource_name"
-            />
+            app:layout_constraintTop_toTopOf="parent" />
+
         <ImageView
             android:id="@+id/favorite"
             android:layout_width="16dp"
             android:layout_height="16dp"
             android:layout_margin="16dp"
             android:contentDescription="favorite"
-            android:visibility="invisible"
             android:src="@drawable/baseline_favorite_24"
-            app:layout_constraintTop_toTopOf="parent"
+            android:visibility="invisible"
             app:layout_constraintStart_toEndOf="@id/hasLink"
-            />
+            app:layout_constraintTop_toTopOf="parent" />
+
         <TextView
             android:id="@+id/resource_size"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="16dp"
-            app:layout_constraintTop_toBottomOf="@id/resource_name"
             android:layout_margin="16dp"
-            tools:text="100,01KB"
-            />
+            android:layout_marginBottom="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/resource_name"
+            tools:text="100,01KB" />
+
         <TextView
             android:id="@+id/resource_last_update"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="16dp"
             android:layout_marginBottom="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@id/resource_size"
-            android:layout_margin="16dp"
-            tools:text="08:50, 14 thg 6, 2023"
-            app:layout_constraintTop_toBottomOf="@id/resource_name"/>
+            app:layout_constraintTop_toBottomOf="@id/resource_name"
+            tools:text="08:50, 14 thg 6, 2023" />
+
         <ImageButton
             android:id="@+id/buttonMore"
             android:layout_width="32dp"
             android:layout_height="48dp"
             android:layout_gravity="end"
-            android:contentDescription="ButtonMore"
             android:background="#00000000"
+            android:contentDescription="ButtonMore"
             android:src="@drawable/baseline_more_vert_24"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            />
+            app:layout_constraintTop_toTopOf="parent" />
+
         <View
             android:layout_width="match_parent"
             android:layout_height="1px"
             android:background="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            />
+            app:layout_constraintStart_toStartOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
