--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -34,6 +34,6 @@
     <fragment
         android:id="@+id/userInfoFragment"
         android:name="com.example.antoanbmtt.ui.navigation.info.UserInfoFragment"
-        android:label=" "
+        android:label="My account"
         tools:layout="@layout/fragment_user_info" />
 </navigation>
