--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -8,66 +8,108 @@
     tools:context=".ui.login.LoginFragment"
     android:padding="16dp">
 
-    <ProgressBar
-        android:id="@+id/progressBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/signUp"
-        android:layout_marginTop="32dp"
-        tools:visibility="visible" />
     <TextView
         android:id="@+id/login_page_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="1dp"
-        android:text="@string/login_page_title"
+        android:text="Welcome to Meta"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/email_text_input"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/email_text_input"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
-        android:minWidth="320dp"
-        app:helperTextTextColor="@color/red"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/login_page_title">
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/email_edit_text"
-            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
-            android:layout_width="match_parent"
-            android:imeOptions="actionNext"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="48dp"
+        android:minWidth="320dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/login_page_title">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/innerLayout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+
+            android:orientation="vertical"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                android:id="@+id/hello_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginBottom="16dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:text="Hello," />
+
+            <TextView
+                android:id="@+id/userNameBiometrics"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:textSize="24sp"
+                app:layout_constraintTop_toBottomOf="@+id/hello_label"
+                app:layout_constraintStart_toStartOf="parent"
+                tools:text="Dao Huy Vu" />
+
+            <ImageView
+                android:id="@+id/fingerprint"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:contentDescription="Biometrics authentication"
+                android:src="@drawable/baseline_fingerprint_24"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/email_text_input"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:inputType="textAutoComplete"
-            android:hint="@string/email_hint" />
-    </com.google.android.material.textfield.TextInputLayout>
+            app:helperTextTextColor="@color/red"
+            android:visibility="gone"
+
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/email_edit_text"
+                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="@string/email_hint"
+                android:imeOptions="actionNext"
+                android:inputType="textAutoComplete" />
+        </com.google.android.material.textfield.TextInputLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/password_text_input"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="32dp"
         android:minWidth="320dp"
-        app:helperTextTextColor="@color/red"
         app:endIconMode="password_toggle"
-        app:layout_constraintStart_toStartOf="@+id/email_text_input"
-        app:layout_constraintTop_toBottomOf="@+id/email_text_input">
+        app:helperTextTextColor="@color/red"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/layout">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/password_edit_text"
             style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:imeOptions="actionDone"
             android:hint="@string/password_hint"
+            android:imeOptions="actionDone"
             android:inputType="textPassword" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -75,14 +117,32 @@
         android:id="@+id/forgot_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="48dp"
-
+        android:layout_marginTop="16dp"
         android:text="@string/forgot_password"
         android:textColor="@color/purple_700"
-        app:layout_constraintStart_toStartOf="@+id/password_text_input"
+        app:layout_constraintEnd_toEndOf="@+id/password_text_input"
         app:layout_constraintTop_toBottomOf="@id/password_text_input" />
 
+    <TextView
+        android:id="@+id/changeAccount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Change account"
+        app:layout_constraintEnd_toStartOf="@+id/forgot_password"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@id/password_text_input"
+        app:layout_constraintTop_toBottomOf="@id/password_text_input" />
+    <TextView
+        android:id="@+id/changeToBiometricAuth"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Change to DaoHuyVu"
+        android:layout_marginTop="16dp"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="@id/password_text_input"
+        app:layout_constraintTop_toBottomOf="@id/password_text_input"
+        />
     <Button
         android:id="@+id/login_btn"
         android:layout_width="wrap_content"
@@ -111,4 +171,14 @@
         android:textColor="@color/purple_700"
         app:layout_constraintStart_toEndOf="@id/new_user"
         android:layout_marginStart="12dp" />
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/signUp"
+        android:layout_marginTop="32dp"
+        tools:visibility="visible" />
 </androidx.constraintlayout.widget.ConstraintLayout>
